--- a/Homepage.html
+++ b/Homepage.html
@@ -4,8 +4,9 @@
   <nav>
     <a href='#'> Home </a>
     <a href='#'> About </a>
+    <a href='#'> Sponsor </a>
     <h1> Homepage </h1>
-    <p> Blablablabla </p>
+    <p> Blablablabla sponsor idea </p>
   </nav>
 </body>
 </html>
