--- a/Homepage.html
+++ b/Homepage.html
@@ -5,6 +5,7 @@
     <a href='#'> Home </a>
     <a href='#'> About </a>
     <h1> Homepage </h1>
+    <p> conflict </p>
     <p> try add paragraph see </p>
     <p> Blablablabla sponsor idea </p>
   </nav>
